; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_urlapi.c_mv_urlhandle.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_urlapi.c_mv_urlhandle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Curl_URL = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.Curl_URL*, %struct.Curl_URL*)* @mv_urlhandle to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mv_urlhandle(%struct.Curl_URL* %0, %struct.Curl_URL* %1) #0 {
  %3 = alloca %struct.Curl_URL*, align 8
  %4 = alloca %struct.Curl_URL*, align 8
  store %struct.Curl_URL* %0, %struct.Curl_URL** %3, align 8
  store %struct.Curl_URL* %1, %struct.Curl_URL** %4, align 8
  %5 = load %struct.Curl_URL*, %struct.Curl_URL** %4, align 8
  %6 = call i32 @free_urlhandle(%struct.Curl_URL* %5)
  %7 = load %struct.Curl_URL*, %struct.Curl_URL** %4, align 8
  %8 = load %struct.Curl_URL*, %struct.Curl_URL** %3, align 8
  %9 = bitcast %struct.Curl_URL* %7 to i8*
  %10 = bitcast %struct.Curl_URL* %8 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %9, i8* align 4 %10, i64 4, i1 false)
  %11 = load %struct.Curl_URL*, %struct.Curl_URL** %3, align 8
  %12 = call i32 @free(%struct.Curl_URL* %11)
  ret void
}

declare dso_local i32 @free_urlhandle(%struct.Curl_URL*) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

declare dso_local i32 @free(%struct.Curl_URL*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
